...
                <TextView
                    android:id="@+id/tvDetailDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorOnHeroSecondary"
                    android:textSize="16sp"
                    tools:text="Almuerzo" />

                <TextView
                    android:id="@+id/tvDetailAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
...
