...
                android:textColor="@color/colorTextSecondary"
                android:visibility="gone"
                app:drawableTint="@color/colorStroke"
                app:drawableTopCompat="@drawable/ic_receipt" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvActivity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingBottom="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_expense" />
...
