...
        android:layout_gravity="top|center_horizontal"
        android:background="@drawable/bg_circle_white"
        android:elevation="18dp"
        android:padding="6dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnNavAdd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/cdAddExpense"
            android:src="@drawable/ic_add"
            app:backgroundTint="@color/colorPrimary"
            app:elevation="0dp"
...
