<?xml version="1.0" encoding="utf-8"?>
<!-- Nombre con el que se guarda una cuenta rapida -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="24dp"
    android:paddingTop="8dp"
    android:paddingEnd="24dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintQuickSplitName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etQuickSplitName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:maxLength="150"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>
</FrameLayout>
